# 42AI_PythonBootcamp_2

./: README.md
module_00/: launch_tests.sh
module_00/ex00/: answers.txt  requirements.txt
module_00/ex01/: exec.py
module_00/ex02/: whois.py
module_00/ex04/: operations.py
module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module_00/ex06/: recipe.py
module_00/ex07/: filterwords.py
module_00/ex08/: sos.py
module_00/ex09/: guess.py
module_00/ex10/: loading.py
module_00/tests/: count.py  count_doc.py  count_test.py  loading_test.py  loading_test1.py  test_cases.sh
module_01/: launch_tests.sh
module_01/ex00/: book.py  recipe.py  test.py
module_01/ex01/: game.py
module_01/ex02/: test.py  vector.py
module_01/ex03/: generator.py
module_01/ex04/: eval.py
module_01/ex05/: the_bank.py
module_01/tests/: eval.py  eval_test.py  test_cases.sh
module_01/tests/ex01/: game_test0.py  game_test1.py  game_test2.py  game_test3.py  game_test4.py  game_test5.py  game_test6.py
module_01/tests/ex02/: vector_test.py  vector_test_mul.py  (+1 more)
module_02/: launch_tests.sh
module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module_02/ex01/: main.py
module_02/ex02/: logger.py
module_02/ex03/: csvreader.py
module_02/ex04/: README.md  build.sh  setup.cfg  setup.py
module_02/tests/: test_cases.sh
module_03/: launch_tests.sh
module_03/ex00/: NumPyCreator.py
module_03/ex01/: ImageProcessor.py
module_03/ex02/: ScrapBooker.py
module_03/ex03/: ColorFilter.py  ImageProcessor.py
module_03/tests/: test_cases.sh
(+16 files in other folders)
